// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu renders Menu with Divider correctly 1`] = `
<ul
  class="zw-menu zw-menu--dark zw-menu--inline"
  role="menu"
>
  <li
    class="zw-menu-item zw-menu-item--level-1"
    role="menuitem"
    style="padding-left:24px"
  >
    投保单复核
  </li>
  <li
    class="zw-menu-item zw-menu-item--level-1"
    role="menuitem"
    style="padding-left:24px"
  >
    在线投保单管理
  </li>
  <li
    class="zw-menu__divider"
  />
  <li
    class="zw-menu-item zw-menu-item--level-1"
    role="menuitem"
    style="padding-left:24px"
  >
    投保单录入
  </li>
  <li
    class="zw-menu-item zw-menu-item--level-1"
    role="menuitem"
    style="padding-left:24px"
  >
    新增计划
  </li>
</ul>
`;

exports[`Menu renders Menu with ItemGroup correctly 1`] = `
<ul
  class="zw-menu zw-menu--light zw-menu--vertical"
  role="menu"
>
  <li
    class="zw-menu-item-group"
  >
    <div
      class="zw-menu-item-group__title"
      style="padding-left:12px"
    >
      投保
    </div>
    <ul
      class="zw-menu-item-group__list"
    >
      <li
        class="zw-menu-item zw-menu-item--level-1"
        role="menuitem"
        style="padding-left:24px"
      >
        投保单复核
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-1"
        role="menuitem"
        style="padding-left:24px"
      >
        在线投保单管理
      </li>
    </ul>
  </li>
  <li
    class="zw-menu__divider"
  />
  <li
    class="zw-menu-item zw-menu-item--level-1"
    role="menuitem"
    style="padding-left:24px"
  >
    投保单录入
  </li>
  <li
    class="zw-menu-item zw-menu-item--level-1"
    role="menuitem"
    style="padding-left:24px"
  >
    新增计划
  </li>
</ul>
`;

exports[`Menu renders Menu with dark theme correctly 1`] = `
<ul
  class="zw-menu zw-menu--dark zw-menu--inline"
  role="menu"
>
  <li
    class="zw-menu-submenu zw-menu-submenu--level-1"
  >
    <div
      class="zw-menu-submenu__title zw-menu-submenu__title-level-1"
      style="padding-left:24px"
    >
      新契约
      <i
        class="zw-menu-submenu__arrow"
      />
    </div>
    <ul
      class="zw-menu-submenu__sub"
      style="display:block"
    >
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        投保单复核
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        在线投保单管理
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        投保单录入
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        新增计划
      </li>
    </ul>
  </li>
  <li
    class="zw-menu-submenu zw-menu-submenu--level-1"
  >
    <div
      class="zw-menu-submenu__title zw-menu-submenu__title-level-1"
      style="padding-left:24px"
    >
      核保
      <i
        class="zw-menu-submenu__arrow"
      />
    </div>
    <ul
      class="zw-menu-submenu__sub"
      style="display:block"
    >
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        核保权限定义
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        核保权限分配
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        规则配置
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        人工核保
      </li>
    </ul>
  </li>
  <li
    class="zw-menu-submenu zw-menu-submenu--level-1"
  >
    <div
      class="zw-menu-submenu__title zw-menu-submenu__title-level-1"
      style="padding-left:24px"
    >
      批改
      <i
        class="zw-menu-submenu__arrow"
      />
    </div>
    <ul
      class="zw-menu-submenu__sub"
      style="display:block"
    >
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        批改新增
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        批改复核
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        批改回退
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        批改共享池
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Menu renders SubMenu with ItemGroup correctly 1`] = `
<ul
  class="zw-menu zw-menu--light zw-menu--inline"
  role="menu"
>
  <li
    class="zw-menu-submenu zw-menu-submenu--level-1"
  >
    <div
      class="zw-menu-submenu__title zw-menu-submenu__title-level-1"
      style="padding-left:24px"
    >
      新契约
      <i
        class="zw-menu-submenu__arrow"
      />
    </div>
    <ul
      class="zw-menu-submenu__sub"
      style="display:block"
    >
      <li
        class="zw-menu-item-group"
      >
        <div
          class="zw-menu-item-group__title"
          style="padding-left:36px"
        >
          投保
        </div>
        <ul
          class="zw-menu-item-group__list"
        >
          <li
            class="zw-menu-item zw-menu-item--level-2"
            role="menuitem"
            style="padding-left:48px"
          >
            投保单复核
          </li>
          <li
            class="zw-menu-item zw-menu-item--level-2"
            role="menuitem"
            style="padding-left:48px"
          >
            在线投保单管理
          </li>
        </ul>
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        投保单录入
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        新增计划
      </li>
    </ul>
  </li>
  <li
    class="zw-menu-item zw-menu-item--level-1"
    role="menuitem"
    style="padding-left:24px"
  >
    投保单录入
  </li>
  <li
    class="zw-menu-item zw-menu-item--level-1"
    role="menuitem"
    style="padding-left:24px"
  >
    新增计划
  </li>
</ul>
`;

exports[`Menu renders collpased Menu correctly 1`] = `
<ul
  class="zw-menu zw-menu--light zw-menu--inline zw-menu--collapsed"
  role="menu"
>
  <li
    class="zw-menu-item zw-menu-item--level-1"
    role="menuitem"
  >
    <div>
      投保单复核
    </div>
  </li>
  <li
    class="zw-menu-item zw-menu-item--level-1"
    role="menuitem"
  >
    <div>
      在线投保单管理
    </div>
  </li>
  <li
    class="zw-menu__divider"
  />
  <li
    class="zw-menu-item zw-menu-item--level-1"
    role="menuitem"
  >
    <div>
      投保单录入
    </div>
  </li>
  <li
    class="zw-menu-item zw-menu-item--level-1"
    role="menuitem"
  >
    <div>
      新增计划
    </div>
  </li>
</ul>
`;

exports[`Menu renders inline Menu with SubMenu correctly 1`] = `
<ul
  class="zw-menu zw-menu--light zw-menu--inline"
  role="menu"
>
  <li
    class="zw-menu-submenu zw-menu-submenu--level-1"
  >
    <div
      class="zw-menu-submenu__title zw-menu-submenu__title-level-1"
      style="padding-left:24px"
    >
      新契约
      <i
        class="zw-menu-submenu__arrow"
      />
    </div>
    <ul
      class="zw-menu-submenu__sub"
      style="display:block"
    >
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        投保单复核
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        在线投保单管理
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        投保单录入
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        新增计划
      </li>
    </ul>
  </li>
  <li
    class="zw-menu-submenu zw-menu-submenu--level-1"
  >
    <div
      class="zw-menu-submenu__title zw-menu-submenu__title-level-1"
      style="padding-left:24px"
    >
      核保
      <i
        class="zw-menu-submenu__arrow"
      />
    </div>
    <ul
      class="zw-menu-submenu__sub"
      style="display:block"
    >
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        核保权限定义
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        核保权限分配
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        规则配置
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        人工核保
      </li>
    </ul>
  </li>
  <li
    class="zw-menu-submenu zw-menu-submenu--level-1"
  >
    <div
      class="zw-menu-submenu__title zw-menu-submenu__title-level-1"
      style="padding-left:24px"
    >
      批改
      <i
        class="zw-menu-submenu__arrow"
      />
    </div>
    <ul
      class="zw-menu-submenu__sub"
      style="display:block"
    >
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        批改新增
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        批改复核
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        批改回退
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        批改共享池
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Menu renders nested SubMenus correctly 1`] = `
<ul
  class="zw-menu zw-menu--light zw-menu--inline"
  role="menu"
>
  <li
    class="zw-menu-submenu zw-menu-submenu--level-1"
  >
    <div
      class="zw-menu-submenu__title zw-menu-submenu__title-level-1"
      style="padding-left:24px"
    >
      理赔
      <i
        class="zw-menu-submenu__arrow"
      />
    </div>
    <ul
      class="zw-menu-submenu__sub"
      style="display:block"
    >
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        报案
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        任务分配
      </li>
      <li
        class="zw-menu-submenu zw-menu-submenu--level-2"
      >
        <div
          class="zw-menu-submenu__title"
          style="padding-left:48px"
        >
          理赔工作流
          <i
            class="zw-menu-submenu__arrow"
          />
        </div>
        <ul
          class="zw-menu-submenu__sub"
          style="display:block"
        >
          <li
            class="zw-menu-item zw-menu-item--level-3"
            role="menuitem"
            style="padding-left:72px"
          >
            休假维护
          </li>
          <li
            class="zw-menu-item zw-menu-item--level-3"
            role="menuitem"
            style="padding-left:72px"
          >
            时效维护
          </li>
        </ul>
      </li>
    </ul>
  </li>
  <li
    class="zw-menu-submenu zw-menu-submenu--level-1"
  >
    <div
      class="zw-menu-submenu__title zw-menu-submenu__title-level-1"
      style="padding-left:24px"
    >
      新契约
      <i
        class="zw-menu-submenu__arrow"
      />
    </div>
    <ul
      class="zw-menu-submenu__sub"
      style="display:block"
    >
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        投保单复核
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        在线投保单管理
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        投保单录入
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        新增计划
      </li>
    </ul>
  </li>
  <li
    class="zw-menu-submenu zw-menu-submenu--level-1"
  >
    <div
      class="zw-menu-submenu__title zw-menu-submenu__title-level-1"
      style="padding-left:24px"
    >
      核保
      <i
        class="zw-menu-submenu__arrow"
      />
    </div>
    <ul
      class="zw-menu-submenu__sub"
      style="display:block"
    >
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        核保权限定义
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        核保权限分配
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        规则配置
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        人工核保
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Menu renders vertical Menu with SubMenu correctly 1`] = `
<ul
  class="zw-menu zw-menu--light zw-menu--vertical"
  role="menu"
>
  <li
    class="zw-menu-submenu zw-menu-submenu--level-1"
  >
    <div
      class="zw-menu-submenu__title zw-menu-submenu__title-level-1"
      style="padding-left:24px"
    >
      新契约
      <i
        class="zw-menu-submenu__arrow"
      />
    </div>
    <ul
      class="zw-menu zw-menu-submenu__sub"
      style="display:none"
    >
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:24px"
      >
        投保单复核
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:24px"
      >
        在线投保单管理
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:24px"
      >
        投保单录入
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:24px"
      >
        新增计划
      </li>
    </ul>
  </li>
  <li
    class="zw-menu-submenu zw-menu-submenu--level-1"
  >
    <div
      class="zw-menu-submenu__title zw-menu-submenu__title-level-1"
      style="padding-left:24px"
    >
      核保
      <i
        class="zw-menu-submenu__arrow"
      />
    </div>
    <ul
      class="zw-menu zw-menu-submenu__sub"
      style="display:none"
    >
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:24px"
      >
        核保权限定义
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:24px"
      >
        核保权限分配
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:24px"
      >
        规则配置
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:24px"
      >
        人工核保
      </li>
    </ul>
  </li>
  <li
    class="zw-menu-submenu zw-menu-submenu--level-1"
  >
    <div
      class="zw-menu-submenu__title zw-menu-submenu__title-level-1"
      style="padding-left:24px"
    >
      批改
      <i
        class="zw-menu-submenu__arrow"
      />
    </div>
    <ul
      class="zw-menu zw-menu-submenu__sub"
      style="display:none"
    >
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:24px"
      >
        批改新增
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:24px"
      >
        批改复核
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:24px"
      >
        批改回退
      </li>
      <li
        class="zw-menu-item zw-menu-item--level-2"
        role="menuitem"
        style="padding-left:24px"
      >
        批改共享池
      </li>
    </ul>
  </li>
</ul>
`;
